--- a/browsing.html
+++ b/browsing.html
@@ -30,16 +30,39 @@
 .search-container button:hover { background-color: #555; }
 
 .product-list {
-  display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  gap: 15px; margin-top: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-top: 15px;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 .product-card {
-  border: 1px solid #ddd; border-radius: 10px; padding: 10px;
-  text-align: center; background-color: white; transition: 0.3s;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  background-color: white;
+  transition: 0.3s;
+  width: 180px;
+  min-width: 180px;
+  max-width: 180px;
+  height: 300px;
+  min-height: 300px;
+  max-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 15px;
+  box-sizing: border-box;
 }
-.product-card:hover { box-shadow: 0 0 8px rgba(0,0,0,0.1); }
 .product-card img {
-  width: 100%; height: 120px; object-fit: cover; border-radius: 8px; margin-bottom: 8px;
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 8px;
 }
 .price { color: #009933; font-weight: 600; }
 </style>
