--- a/chat.html
+++ b/chat.html
@@ -10,11 +10,16 @@
 
 <nav class="navbar">
   <div class="logo"><img src="assets/img/LogoBW.png" alt="Logo" style="width:140px;height:55px;border-radius:6px;object-fit:cover"></div>
-  <div class="nav-links">
+  <div class="menu-toggle" onclick="toggleMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <div class="nav-links" id="navLinks">
     <a href="index.html">Home</a>
     <a href="browsing.html">Browsing</a>
     <a href="tentang.html">Tentang Kami</a>
-    <a href="chat.html">Chat</a>
+    <a href="chat.html" class="active">Chat</a>
     <a href="login.html" class="login-btn">Log In / Sign In</a>
     <a href="pinjam.html" class="cart-link">
       <img src="assets/img/cart.png" alt="Cart" style="width:25px;vertical-align:middle;">
@@ -22,6 +27,13 @@
     </a>
   </div>
 </nav>
+
+<script>
+function toggleMenu() {
+  const navLinks = document.getElementById('navLinks');
+  navLinks.classList.toggle('active');
+}
+</script>
 
 
 <div class="container" style="margin-top:18px;max-width:800px">
