--- a/detail.html
+++ b/detail.html
@@ -43,7 +43,12 @@
 
 <nav class="navbar">
   <div class="logo"><img src="assets/img/LogoBW.png" alt="Logo" style="width:140px;height:55px;border-radius:6px;object-fit:cover"></div>
-  <div class="nav-links">
+  <div class="menu-toggle" onclick="toggleMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <div class="nav-links" id="navLinks">
     <a href="index.html">Home</a>
     <a href="browsing.html">Browsing</a>
     <a href="tentang.html">Tentang Kami</a>
@@ -55,6 +60,13 @@
     </a>
   </div>
 </nav>
+
+<script>
+function toggleMenu() {
+  const navLinks = document.getElementById('navLinks');
+  navLinks.classList.toggle('active');
+}
+</script>
 
 <div class="detail-container" id="detailContainer">
   <p>Memuat data barang...</p>
@@ -76,7 +88,7 @@
     <h3>Sewa Barang</h3>
     <p id="rentItemName"></p>
     <label>Jumlah Barang:</label><br>
-    <input type="number" id="rentQty" min="1" value="1" style="width:80%;margin:5px 0;padding:5px;"><br>
+    <input type="number" id="rentQty" min="1" max="99" onchange="validateQuantity()" style="width:80%;margin:5px 0;padding:5px;"><br>
     
     <label>Tanggal Mulai:</label><br>
     <input type="date" id="rentStart" style="width:80%;margin:5px 0;padding:5px;"><br>
@@ -92,14 +104,13 @@
 <script>
 // Product data (same as browsing.html)
 const products = [
-  { name: "Kamera Canon", category: "Elektronik", price: 50000, img: "assets/img/PH.png", desc: "Kamera DSLR Canon dengan kualitas foto profesional." },
-  { name: "Laptop ASUS", category: "Elektronik", price: 100000, img: "assets/img/PH.png", desc: "Laptop ASUS berkinerja tinggi, cocok untuk kerja dan hiburan." },
-  { name: "Obeng Set", category: "Peralatan", price: 15000, img: "assets/img/PH.png", desc: "Set obeng lengkap berbagai ukuran untuk keperluan rumah." },
-  { name: "Tangga Lipat", category: "Peralatan", price: 25000, img: "assets/img/PH.png", desc: "Tangga lipat aluminium ringan dan kokoh." },
-  { name: "Sepeda Gunung", category: "Olahraga", price: 75000, img: "assets/img/PH.png", desc: "Sepeda gunung dengan suspensi ganda dan rem cakram." },
-  { name: "Meja Belajar", category: "Furnitur", price: 40000, img: "assets/img/PH.png", desc: "Meja belajar minimalis dengan desain modern." },
-  { name: "Kursi Kantor", category: "Furnitur", price: 45000, img: "assets/img/PH.png", desc: "Kursi kantor ergonomis untuk kenyamanan maksimal." },
-  { name: "Tenda Camping", category: "Lainnya", price: 60000, img: "assets/img/PH.png", desc: "Tenda berkapasitas 4 orang, tahan air dan mudah dipasang." },
+  { name: "Proyektor HD", category: "Elektronik", price: 100000, img: "assets/img/PH.png", desc: "Proyektor HD berkualitas tinggi, cocok untuk presentasi dan home cinema." },
+  { name: "Kamera DSLR", category: "Elektronik", price: 80000, img: "assets/img/PH.png", desc: "Kamera DSLR profesional untuk fotografi berkualitas tinggi." },
+  { name: "Set Berkebun", category: "Peralatan", price: 25000, img: "assets/img/PH.png", desc: "Peralatan berkebun lengkap termasuk sekop, gunting, dan alat penyiram." },
+  { name: "Mesin Jahit", category: "Peralatan", price: 35000, img: "assets/img/PH.png", desc: "Mesin jahit portable dengan berbagai fungsi jahitan." },
+  { name: "Tenda Camping", category: "Olahraga", price: 60000, img: "assets/img/PH.png", desc: "Tenda camping 4 orang, tahan air dan mudah dipasang." },
+  { name: "Meja Belajar", category: "Furnitur", price: 40000, img: "assets/img/PH.png", desc: "Meja belajar minimalis dengan desain modern dan ergonomis." },
+  { name: "Kursi Kantor", category: "Furnitur", price: 45000, img: "assets/img/PH.png", desc: "Kursi kantor ergonomis dengan sandaran yang nyaman." }
 ];
 
 // === Parse Query ===
@@ -111,14 +122,13 @@ let selectedItem = null;
 // === Inventory Logic (same as browsing.html) ===
 const defaultStock = 5;
 const initialStock = {
-  "Kamera Canon": 2,
-  "Laptop ASUS": 0,
-  "Obeng Set": 8,
-  "Tangga Lipat": 4,
-  "Sepeda Gunung": 1,
-  "Meja Belajar": 6,
-  "Kursi Kantor": 3,
-  "Tenda Camping": 5
+  "Proyektor HD": 3,
+  "Kamera DSLR": 2,
+  "Set Berkebun": 5,
+  "Mesin Jahit": 4,
+  "Tenda Camping": 6,
+  "Meja Belajar": 4,
+  "Kursi Kantor": 3
 };
 function getInventory() {
   return JSON.parse(localStorage.getItem("inventory") || "{}")
@@ -206,6 +216,18 @@ function addToCart(name) {
 
 function closeModal() {
   document.getElementById("rentModal").style.display = "none";
+}
+
+// Validate quantity based on available stock
+function validateQuantity() {
+  const qtyInput = document.getElementById("rentQty");
+  const qty = parseInt(qtyInput.value);
+  if (qty > availableQty) {
+    qtyInput.value = availableQty;
+  }
+  if (qty < 1) {
+    qtyInput.value = 1;
+  }
 }
 
 function confirmRent() {
