--- a/tentang.html
+++ b/tentang.html
@@ -104,7 +104,12 @@
   <div class="logo">
     <img src="assets/img/LogoBW.png" alt="Logo" style="width:140px;height:55px;border-radius:6px;object-fit:cover">
   </div>
-  <div class="nav-links">
+  <div class="menu-toggle" onclick="toggleMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <div class="nav-links" id="navLinks">
     <a href="index.html">Home</a>
     <a href="browsing.html">Browsing</a>
     <a href="tentang.html" class="active">Tentang Kami</a>
@@ -116,6 +121,13 @@
     </a>
   </div>
 </nav>
+
+<script>
+function toggleMenu() {
+  const navLinks = document.getElementById('navLinks');
+  navLinks.classList.toggle('active');
+}
+</script>
 
 <!-- Hero Section -->
 <section class="hero">
