--- a/browsing.html
+++ b/browsing.html
@@ -101,19 +101,19 @@ function toggleMenu() {
   
   <div class="category-list">
     <div class="category-item" onclick="filterCategory('Elektronik')">
-      <img src="assets/img/elektronik-icon.png" alt="Elektronik" onerror="this.src='assets/img/PH.png'">
+      <img src="assets/img/Icon Electronic.png" alt="Elektronik" onerror="this.src='assets/img/PH.png'">
       <p>Elektronik</p>
     </div>
     <div class="category-item" onclick="filterCategory('Peralatan')">
-      <img src="assets/img/peralatan-icon.png" alt="Peralatan" onerror="this.src='assets/img/PH.png'">
+      <img src="assets/img/Icon Handyman’s Tools.png" alt="Peralatan" onerror="this.src='assets/img/PH.png'">
       <p>Peralatan</p>
     </div>
     <div class="category-item" onclick="filterCategory('Olahraga')">
-      <img src="assets/img/olahraga-icon.png" alt="Olahraga" onerror="this.src='assets/img/PH.png'">
+      <img src="assets/img/Icon Sport.png" alt="Olahraga" onerror="this.src='assets/img/PH.png'">
       <p>Olahraga</p>
     </div>
     <div class="category-item" onclick="filterCategory('Furnitur')">
-      <img src="assets/img/furnitur-icon.png" alt="Furnitur" onerror="this.src='assets/img/PH.png'">
+      <img src="assets/img/Icon Furnitures.png" alt="Furnitur" onerror="this.src='assets/img/PH.png'">
       <p>Furnitur</p>
     </div>
   </div>
@@ -134,13 +134,13 @@ function toggleMenu() {
 <script>
 // === Product Data ===
 const products = [
-  { name: "Proyektor HD", category: "Elektronik", price: 100000, img: "assets/img/PH.png" },
-  { name: "Kamera DSLR", category: "Elektronik", price: 80000, img: "assets/img/PH.png" },
-  { name: "Set Berkebun", category: "Peralatan", price: 25000, img: "assets/img/PH.png" },
-  { name: "Mesin Jahit", category: "Peralatan", price: 35000, img: "assets/img/PH.png" },
-  { name: "Tenda Camping", category: "Olahraga", price: 60000, img: "assets/img/PH.png" },
-  { name: "Meja Belajar", category: "Furnitur", price: 40000, img: "assets/img/PH.png" },
-  { name: "Kursi Kantor", category: "Furnitur", price: 45000, img: "assets/img/PH.png" }
+  { name: "Proyektor HD", category: "Elektronik", price: 100000, img: "assets/img/Projector.png" },
+  { name: "Kamera DSLR", category: "Elektronik", price: 80000, img: "assets/img/Kamera.png" },
+  { name: "Set Berkebun", category: "Peralatan", price: 25000, img: "assets/img/Gardening.png" },
+  { name: "Mesin Jahit", category: "Peralatan", price: 35000, img: "assets/img/jahit.png" },
+  { name: "Tenda Camping", category: "Olahraga", price: 60000, img: "assets/img/Tenda.png" },
+  { name: "Padel", category: "Olahraga", price: 40000, img: "assets/img/Padel.png" },
+  { name: "Ranjang Bayi", category: "Furnitur", price: 45000, img: "assets/img/BC.png" }
 ];
 
 // === Display Products ===
