--- a/detail.html
+++ b/detail.html
@@ -104,13 +104,13 @@ function toggleMenu() {
 <script>
 // Product data (same as browsing.html)
 const products = [
-  { name: "Proyektor HD", category: "Elektronik", price: 100000, img: "assets/img/PH.png", desc: "Proyektor HD berkualitas tinggi, cocok untuk presentasi dan home cinema." },
-  { name: "Kamera DSLR", category: "Elektronik", price: 80000, img: "assets/img/PH.png", desc: "Kamera DSLR profesional untuk fotografi berkualitas tinggi." },
-  { name: "Set Berkebun", category: "Peralatan", price: 25000, img: "assets/img/PH.png", desc: "Peralatan berkebun lengkap termasuk sekop, gunting, dan alat penyiram." },
-  { name: "Mesin Jahit", category: "Peralatan", price: 35000, img: "assets/img/PH.png", desc: "Mesin jahit portable dengan berbagai fungsi jahitan." },
-  { name: "Tenda Camping", category: "Olahraga", price: 60000, img: "assets/img/PH.png", desc: "Tenda camping 4 orang, tahan air dan mudah dipasang." },
-  { name: "Meja Belajar", category: "Furnitur", price: 40000, img: "assets/img/PH.png", desc: "Meja belajar minimalis dengan desain modern dan ergonomis." },
-  { name: "Kursi Kantor", category: "Furnitur", price: 45000, img: "assets/img/PH.png", desc: "Kursi kantor ergonomis dengan sandaran yang nyaman." }
+  { name: "Proyektor", category: "Elektronik", price: 100000, img: "assets/img/Proyektor.png", desc: "Proyektor berkualitas tinggi, cocok untuk presentasi dan home cinema." },
+  { name: "Kamera", category: "Elektronik", price: 80000, img: "assets/img/Kamera.png", desc: "Kamera profesional untuk fotografi berkualitas tinggi." },
+  { name: "Set Berkebun", category: "Peralatan", price: 25000, img: "assets/img/Gardening.png", desc: "Peralatan berkebun lengkap termasuk sekop, gunting, dan alat penyiram." },
+  { name: "Mesin Jahit", category: "Peralatan", price: 35000, img: "assets/img/Jahit.png", desc: "Mesin jahit portable dengan berbagai fungsi jahitan." },
+  { name: "Tenda Camping", category: "Olahraga", price: 60000, img: "assets/img/Tenda.png", desc: "Tenda camping 4 orang, tahan air dan mudah dipasang." },
+  { name: "Set Padel", category: "Olahraga", price: 40000, img: "assets/img/Padel.png", desc: "Set padel untuk 2 orang, nyaman dan nyaman." },
+  { name: "Ranjang Bayi", category: "Furnitur", price: 45000, img: "assets/img/BC.png", desc: "Ranjang bayi dengan desain modern dan ergonomis." }
 ];
 
 // === Parse Query ===
