--- a/browsing.html
+++ b/browsing.html
@@ -134,12 +134,12 @@ function toggleMenu() {
 <script>
 // === Product Data ===
 const products = [
-  { name: "Proyektor HD", category: "Elektronik", price: 100000, img: "assets/img/Projector.png" },
-  { name: "Kamera DSLR", category: "Elektronik", price: 80000, img: "assets/img/Kamera.png" },
+  { name: "Proyektor", category: "Elektronik", price: 100000, img: "assets/img/Projector.png" },
+  { name: "Kamera", category: "Elektronik", price: 80000, img: "assets/img/Kamera.png" },
   { name: "Set Berkebun", category: "Peralatan", price: 25000, img: "assets/img/Gardening.png" },
   { name: "Mesin Jahit", category: "Peralatan", price: 35000, img: "assets/img/jahit.png" },
   { name: "Tenda Camping", category: "Olahraga", price: 60000, img: "assets/img/Tenda.png" },
-  { name: "Padel", category: "Olahraga", price: 40000, img: "assets/img/Padel.png" },
+  { name: "Set Padel", category: "Olahraga", price: 40000, img: "assets/img/Padel.png" },
   { name: "Ranjang Bayi", category: "Furnitur", price: 45000, img: "assets/img/BC.png" }
 ];
 
