--- a/browsing.html
+++ b/browsing.html
@@ -119,9 +119,9 @@ function toggleMenu() {
       <img src="assets/img/Icon Handyman’s Tools.png" alt="Peralatan" onerror="this.src='assets/img/PH.png'">
       <p>Peralatan</p>
     </div>
-    <div class="category-item" onclick="filterCategory('Olahraga')">
+    <div class="category-item" onclick="filterCategory('Hobi')">
       <img src="assets/img/Icon Sport.png" alt="Olahraga" onerror="this.src='assets/img/PH.png'">
-      <p>Olahraga</p>
+      <p>Hobi</p>
     </div>
     <div class="category-item" onclick="filterCategory('Furnitur')">
       <img src="assets/img/Icon Furnitures.png" alt="Furnitur" onerror="this.src='assets/img/PH.png'">
@@ -151,9 +151,20 @@ const products = [
   { name: "Kamera", category: "Elektronik", price: 80000, img: "assets/img/Kamera.png" },
   { name: "Set Berkebun", category: "Peralatan", price: 25000, img: "assets/img/Gardening.png" },
   { name: "Mesin Jahit", category: "Peralatan", price: 35000, img: "assets/img/Jahit.png" },
-  { name: "Tenda Camping", category: "Olahraga", price: 60000, img: "assets/img/Tenda.png" },
-  { name: "Set Padel", category: "Olahraga", price: 40000, img: "assets/img/Padel.png" },
-  { name: "Ranjang Bayi", category: "Furnitur", price: 45000, img: "assets/img/BC.png" }
+  { name: "Tenda Camping", category: "Hobi", price: 60000, img: "assets/img/Tenda.png" },
+  { name: "Set Padel", category: "Hobi", price: 40000, img: "assets/img/Padel.png" },
+  { name: "Ranjang Bayi", category: "Furnitur", price: 45000, img: "assets/img/BC.png" },
+  { name: "Biola", category: "Hobi", price: 75000, img: "assets/img/Biola.png" },
+  { name: "Cello", category: "Hobi", price: 120000, img: "assets/img/Cello.png" },
+  { name: "Gitar Elektrik", category: "Hobi", price: 90000, img: "assets/img/Gitar Elektrik.png" },
+  { name: "Teleskop", category: "Hobi", price: 110000, img: "assets/img/Teleskop.png" },
+  { name: "Air Fryer", category: "Elektronik", price: 50000, img: "assets/img/Air Fyer.png" },
+  { name: "Griller", category: "Elektronik", price: 45000, img: "assets/img/Griller.png" },
+  { name: "Oven", category: "Elektronik", price: 70000, img: "assets/img/Oven.png" },
+  { name: "Kipas Angin", category: "Elektronik", price: 20000, img: "assets/img/Kipas Angin.png" },
+  { name: "Printer", category: "Elektronik", price: 60000, img: "assets/img/Printer.png" },
+  { name: "DJ Controller", category: "Hobi", price: 130000, img: "assets/img/DJ Controller.png" },
+  { name: "Set Alat Golf", category: "Hobi", price: 150000, img: "assets/img/Set Alat Golf.png" }
 ];
 
 // === Display Products ===
